--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- bootstrap-icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="bg-gray-50">
   <app-root></app-root>
 </body>
 </html>
